[package]
name = "sdk-node"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
backoff = "0.4"
cross-domain-message-gossip = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
derivative = "2.2.0"
derive_builder = "0.12"
derive_more = "0.99"
domain-client-message-relayer = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
domain-client-operator = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
domain-eth-service = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
domain-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
domain-service = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
evm-domain-runtime = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
fp-evm = { version = "3.0.0-dev", git = "https://github.com/subspace/frontier", rev = "7627e61d80275a4cf24d06f27491f6c31eadb7b7" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
futures = "0.3"
hex-literal = "0.4"
pallet-rewards = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
pallet-subspace = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
parity-scale-codec = "3.6.3"
parking_lot = "0.12"
pin-project = "1"
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sc-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sc-network-sync = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8", default-features = false }
sc-storage-monitor = { version = "0.1.0", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8", default-features = false }
sc-subspace-chain-specs = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sdk-dsn = { path = "../dsn" }
sdk-substrate = { path = "../substrate" }
sdk-traits = { path = "../traits" }
sdk-utils = { path = "../utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sp-consensus-subspace = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sp-domains = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
sp-messenger = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
sp-version = { version = "22.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "d6b500960579d73c43fc4ef550b703acfa61c4c8" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90", default-features = false }
subspace-farmer-components = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
subspace-rpc-primitives = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
subspace-runtime = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
subspace-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
subspace-service = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
tokio = { version = "1.34.0", features = ["fs", "rt", "tracing", "macros", "parking_lot", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
tracing = "0.1"
