[package]
name = "subspace-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk-dsn = { path = "../dsn" }
sdk-farmer = { path = "../farmer", default-features = false }
sdk-node = { path = "../node" }
sdk-substrate = { path = "../substrate" }
sdk-utils = { path = "../utils" }
static_assertions = "1.1.0"

subspace-proof-of-space = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_builder = "0.12"
derive_more = "0.99"
fdlimit = "0.2"
futures = "0.3"
mimalloc = { version = "*", default-features = false }
serde_json = "1"
subspace-farmer-components = { git = "https://github.com/subspace/subspace", rev = "a2e0318a75705ab31975ac8b172c999cab378e90" }
tempfile = "3"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"


[target.'cfg(tokio_unstable)'.dev-dependencies]
console-subscriber = "0.1"

[features]
default = ["numa"]
numa = [
    "sdk-farmer/numa",
]
